Fixed dark mode, switched from shard to share terminology

--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -5,7 +5,12 @@
   width: 100%;
 }
 
-.featureSvg {
+.featureImg {
   height: 200px;
   width: 200px;
+}
+
+html[data-theme='dark'] .featureImg {
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
 }
